# mindgames-stars

./: .env  .gitignore  README.md  main.py  notes.txt  pyproject.toml
src/: crewai_test.py  models.py  offline_evaluation.py  offline_play.py  offline_play_track2.py  online_play_track2.py  samples.json  scripts.py  stars_agent.py  stars_agent_track2.py  stars_agent_track2_baseline.py  stars_agent_track2_v2.py  stars_agent_track2_v3.py  stars_agent_track2_v4.py  stars_agent_track2_v5.py  stars_agent_track2_v6.py  stars_agent_track2_v7.py  stars_agent_track2_v8.py  stars_agent_track2_v9.py  utils.py
