[project]
name = "mindgames-starter-kit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "litellm>=1.75.0",
    "outlines>=1.2.1",
    "textarena>=0.7.3",
    "transformers>=4.55.0",
    "torch>=2.1.2",
    "ollama>=0.5.3",
    "accelerate>=1.10.0",
    "bitsandbytes>=0.46.1",
    "pandas>=2.3.1",
    "tabulate>=0.9.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win_amd64'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
